--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.Specification" Version="9.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.8" />
     <PackageReference Include="Scrutor" Version="6.1.0" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
