--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -1,37 +1,52 @@
 {
-    /*
+  /*
 The following identity settings need to be configured
 before the project can be successfully executed.
 For more info see https://aka.ms/dotnet-template-ms-identity-platform
 */
-    "AzureAd": {
-        "Instance": "https://login.microsoftonline.com/",
-        "Domain": "qualified.domain.name",
-        "TenantId": "22222222-2222-2222-2222-222222222222",
-        "ClientId": "11111111-1111-1111-11111111111111111",
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "qualified.domain.name",
+    "TenantId": "22222222-2222-2222-2222-222222222222",
+    "ClientId": "11111111-1111-1111-11111111111111111",
 
-        "Scopes": "access_as_user",
-        "CallbackPath": "/signin-oidc"
-    },
-    "ConnectionStrings": {
-        "Database": ""
-    },
-    "RepositoryCacheSettings": {
+    "Scopes": "access_as_user",
+    "CallbackPath": "/signin-oidc"
+  },
+  "ConnectionStrings": {
+    "Database": ""
+  },
+  "RepositoryCacheSettings": {
+    "Enabled": true,
+    "DefaultExpirationInMinutes": 60,
+    "PerEntitySettings": {
+      "Car": {
         "Enabled": true,
-        "DefaultExpirationInMinutes": 60,
-        "PerEntitySettings": {
-            "Car": {
-                "Enabled": true,
-                "ExpirationInMinutes": 1
-            }
-        }
+        "ExpirationInMinutes": 1
+      }
+    }
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AzureServiceBus": {
+    "Enabled": false,
+    "Sender": {
+      "Queues": [],
+      "Topics":  ["car-events"]
     },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "UseOnlyInMemoryDatabase": true,
-    "AllowedHosts": "*"
+    "TopicSubscribers": [
+      {
+        "TopicName": "warehouse-events",
+        "SubscriptionName": "cars-service",
+        "AutoCompleteMessages": false,
+        "MaxConcurrentCalls":  1
+      }
+    ]
+  },
+  "UseOnlyInMemoryDatabase": true,
+  "AllowedHosts": "*"
 }
