Correct Dependany Injection of ServiceBusTopicSubscriber background worker Update service bus configs for ServiceBus Emulator

--- a/src/Web.Api/appsettings.json
+++ b/src/Web.Api/appsettings.json
@@ -33,17 +33,18 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
     }
   },
   "AzureServiceBus": {
-    "Enabled": false,
+    "Enabled": true,
+    "ConnectionString": "Endpoint=sb://localhost;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=SAS_KEY_VALUE;UseDevelopmentEmulator=true;",
     "Sender": {
       "Queues": [],
-      "Topics":  ["car-events"]
+      "Topics": [ "cars-events" ]
     },
     "TopicSubscribers": [
       {
         "TopicName": "warehouse-events",
         "SubscriptionName": "cars-service",
         "AutoCompleteMessages": false,
-        "MaxConcurrentCalls":  1
+        "MaxConcurrentCalls": 1
       }
     ]
   },
