Add component tests for Outbox Dispatcher

--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -27,6 +27,7 @@
 
   <ItemGroup>
     <InternalsVisibleTo Include="UnitTests" />
+    <InternalsVisibleTo Include="ComponentTests" />
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
 
