--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -25,10 +25,11 @@
     <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.12" />
     <PackageVersion Include="Microsoft.Extensions.Azure" Version="1.13.1" />
     <PackageVersion Include="Microsoft.Extensions.Configuration" Version="9.0.9" />
-    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.9" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.12" />
     <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="9.0.12" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.12" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.12" />
+    <PackageVersion Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.12" />
     <PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.12" />
     <PackageVersion Include="Microsoft.Identity.Web" Version="3.13.2" />
     <PackageVersion Include="Microsoft.Identity.Web.DownstreamApi" Version="3.13.2" />
@@ -41,7 +42,7 @@
     <PackageVersion Include="System.Memory.Data" Version="9.0.12" />
     <PackageVersion Include="UUIDNext" Version="4.2.2" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
-    <PackageVersion Include="coverlet.msbuild" Version="6.0.4"/>
+    <PackageVersion Include="coverlet.msbuild" Version="6.0.4" />
     <PackageVersion Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.11" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageVersion Include="NSubstitute" Version="5.3.0" />
