--- a/tests/ComponentTests/ComponentTests.csproj
+++ b/tests/ComponentTests/ComponentTests.csproj
@@ -25,9 +25,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Application\Application.csproj" />
-    <ProjectReference Include="..\..\src\Cqrs\Cqrs.csproj" />
     <ProjectReference Include="..\..\src\Infrastructure\Infrastructure.csproj" />
-    <ProjectReference Include="..\..\src\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="..\..\src\Shared\Cqrs\Cqrs\Cqrs.csproj" />
+    <ProjectReference Include="..\..\src\Shared\SharedKernel\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
   <ItemGroup>
