--- a/src/Shared/Cqrs/Cqrs.AzureServiceBus/Cqrs.AzureServiceBus.csproj
+++ b/src/Shared/Cqrs/Cqrs.AzureServiceBus/Cqrs.AzureServiceBus.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.Specification" />
+    <PackageReference Include="Azure.Messaging.ServiceBus" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Cqrs\Cqrs.csproj" />
   </ItemGroup>
 
 </Project>
