--- a/src/Domain/Domain.csproj
+++ b/src/Domain/Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Ardalis.Specification" />
+    <PackageReference Include="Ardalis.Result" />
   </ItemGroup>
 
   <ItemGroup>
