--- a/src/Shared/Cqrs/Cqrs/Cqrs.csproj
+++ b/src/Shared/Cqrs/Cqrs/Cqrs.csproj
@@ -8,14 +8,12 @@
 
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" />
-    <PackageReference Include="Azure.Messaging.ServiceBus" />
+    <PackageReference Include="Ardalis.Result.FluentValidation" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" />
     <PackageReference Include="Microsoft.Extensions.Azure" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" />
     <PackageReference Include="Scrutor" />
-    <PackageReference Include="System.Memory.Data" />
+    <PackageReference Include="Serilog" />
   </ItemGroup>
   <ItemGroup>
     <InternalsVisibleTo Include="UnitTests" />
