--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -23,7 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
     <ProjectReference Include="..\Shared\Cqrs\Cqrs.EntityFrameworkCore\Cqrs.EntityFrameworkCore.csproj" />
-    <ProjectReference Include="..\Shared\RepositoryCaching\RepositoryCaching\RepositoryCaching.csproj" />
+    <ProjectReference Include="..\Shared\RepositoryCaching\RepositoryCaching.EntityFrameworkCore\RepositoryCaching.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\Shared\SharedKernel\SharedKernel\SharedKernel.csproj" />
   </ItemGroup>
 
