--- a/src/Shared/RepositoryCaching/RepositoryCaching.EntityFrameworkCore/RepositoryCaching.EntityFrameworkCore.csproj
+++ b/src/Shared/RepositoryCaching/RepositoryCaching.EntityFrameworkCore/RepositoryCaching.EntityFrameworkCore.csproj
@@ -7,14 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
-    <PackageReference Include="Scrutor" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\SharedKernel\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="..\RepositoryCaching\RepositoryCaching.csproj" />
   </ItemGroup>
 
 </Project>
