Migrate unit tests to new strucuture

--- a/src/Shared/Cqrs/Cqrs.EntityFrameworkCore/Cqrs.EntityFrameworkCore.csproj
+++ b/src/Shared/Cqrs/Cqrs.EntityFrameworkCore/Cqrs.EntityFrameworkCore.csproj
@@ -6,6 +6,7 @@
   <ItemGroup>
     <InternalsVisibleTo Include="UnitTests" />
     <InternalsVisibleTo Include="ComponentTests" />
+    <InternalsVisibleTo Include="Cqrs.EntityFrameworkCore.UnitTests" />
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
   <ItemGroup>
