--- a/src/Shared/Cqrs/Cqrs/Cqrs.csproj
+++ b/src/Shared/Cqrs/Cqrs/Cqrs.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <InternalsVisibleTo Include="UnitTests" />
     <InternalsVisibleTo Include="ComponentTests" />
+    <InternalsVisibleTo Include="Cqrs.UnitTests" />
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
   <ItemGroup>
