--- a/src/Shared/Cqrs/Cqrs.EntityFrameworkCore/Cqrs.EntityFrameworkCore.csproj
+++ b/src/Shared/Cqrs/Cqrs.EntityFrameworkCore/Cqrs.EntityFrameworkCore.csproj
@@ -7,6 +7,7 @@
     <InternalsVisibleTo Include="UnitTests" />
     <InternalsVisibleTo Include="ComponentTests" />
     <InternalsVisibleTo Include="Cqrs.EntityFrameworkCore.UnitTests" />
+    <InternalsVisibleTo Include="Cqrs.IntegrationTests" />
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
   <ItemGroup>
