--- a/src/Shared/Cqrs/Cqrs/Cqrs.csproj
+++ b/src/Shared/Cqrs/Cqrs/Cqrs.csproj
@@ -13,6 +13,7 @@
     <InternalsVisibleTo Include="UnitTests" />
     <InternalsVisibleTo Include="ComponentTests" />
     <InternalsVisibleTo Include="Cqrs.UnitTests" />
+    <InternalsVisibleTo Include="Cqrs.IntegrationTests" />
     <InternalsVisibleTo Include="DynamicProxyGenAssembly2" />
   </ItemGroup>
   <ItemGroup>
