--- a/tests/integration/WebApiTemplate.IntegrationTests/WebApiTemplate.IntegrationTests.csproj
+++ b/tests/integration/WebApiTemplate.IntegrationTests/WebApiTemplate.IntegrationTests.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <IsPackable>false</IsPackable>
     <outputType>Exe</outputType>
+    <EnableMicrosoftTestingPlatform>true</EnableMicrosoftTestingPlatform>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,7 +15,8 @@
     <PackageReference Include="Testcontainers.MsSql" />
     <PackageReference Include="Testcontainers.ServiceBus" />
     <PackageReference Include="Testcontainers.XunitV3" />
-    <PackageReference Include="xunit.v3" />
+    <PackageReference Include="Microsoft.Testing.Platform.MSBuild" />
+    <PackageReference Include="xunit.v3.mtp-v2" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
 
