--- a/tests/integration/WebApiTemplate.IntegrationTests/WebApiTemplate.IntegrationTests.csproj
+++ b/tests/integration/WebApiTemplate.IntegrationTests/WebApiTemplate.IntegrationTests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Testcontainers.ServiceBus" />
     <PackageReference Include="Testcontainers.XunitV3" />
     <PackageReference Include="Microsoft.Testing.Platform.MSBuild" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
     <PackageReference Include="xunit.v3.mtp-v2" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
