--- a/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
+++ b/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Testcontainers.MsSql" />
     <PackageReference Include="Testcontainers.XunitV3" />
     <PackageReference Include="Microsoft.Testing.Platform.MSBuild" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
     <PackageReference Include="xunit.v3.mtp-v2" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
