--- a/tests/unit/Domain.UnitTests/Domain.UnitTests.csproj
+++ b/tests/unit/Domain.UnitTests/Domain.UnitTests.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="Microsoft.Testing.Platform.MSBuild" />
