--- a/tests/unit/shared/Cqrs/Cqrs.UnitTests/Cqrs.UnitTests.csproj
+++ b/tests/unit/shared/Cqrs/Cqrs.UnitTests/Cqrs.UnitTests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="Microsoft.Testing.Platform.MSBuild" />
+    <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
     <PackageReference Include="xunit.v3.mtp-v2" />
     <PackageReference Include="xunit.runner.visualstudio" />
   </ItemGroup>
