--- a/tests/unit/shared/Cqrs/Cqrs.UnitTests/Cqrs.UnitTests.csproj
+++ b/tests/unit/shared/Cqrs/Cqrs.UnitTests/Cqrs.UnitTests.csproj
@@ -12,6 +12,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.Testing" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="Shouldly" />
@@ -24,10 +26,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs\Cqrs.csproj" />
     <ProjectReference Include="..\..\..\..\..\src\Shared\SharedKernel\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="..\Cqrs.DomainTestFixture\Cqrs.DomainTestFixture.csproj" />
+    <ProjectReference Include="..\Cqrs.ApplicationTestFixture\Cqrs.ApplicationTestFixture.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
-
 </Project>
