--- a/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
+++ b/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
@@ -18,6 +18,7 @@
     <PackageReference Include="Polly" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="Testcontainers.MsSql" />
+    <PackageReference Include="Testcontainers.ServiceBus" />
     <PackageReference Include="Testcontainers.XunitV3" />
     <PackageReference Include="Microsoft.Testing.Platform.MSBuild" />
     <PackageReference Include="Microsoft.Testing.Extensions.CodeCoverage" />
@@ -27,13 +28,20 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\src\Application\Application.csproj" />
-    <ProjectReference Include="..\..\..\..\..\src\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs.AzureServiceBus\Cqrs.AzureServiceBus.csproj" />
     <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs.EntityFrameworkCore\Cqrs.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\..\..\..\src\Shared\SharedKernel\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="..\ShopApp\Shop.Application\Shop.Application.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Using Include="Xunit" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="service-bus-config.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
