--- a/tests/unit/shared/Cqrs/Cqrs.ApplicationTestFixture/Cqrs.ApplicationTestFixture.csproj
+++ b/tests/unit/shared/Cqrs/Cqrs.ApplicationTestFixture/Cqrs.ApplicationTestFixture.csproj
@@ -1,13 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs.AzureServiceBus\Cqrs.AzureServiceBus.csproj" />
+    <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs.EntityFrameworkCore\Cqrs.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs\Cqrs.csproj" />
     <ProjectReference Include="..\..\..\..\..\src\Shared\SharedKernel\SharedKernel\SharedKernel.csproj" />
     <ProjectReference Include="..\Cqrs.DomainTestFixture\Cqrs.DomainTestFixture.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Ardalis.Specification.EntityFrameworkCore" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" />
   </ItemGroup>
 
 </Project>
