Clean up integration tests Add additional tests for CommandHandler

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
 ## Custom ignores
-/src/Web.Api/appsettings.Development.json
+**/appsettings.Development.json
 /tests/coverage-report/
 *.claude
 
@@ -368,3 +368,5 @@ MigrationBackup/
 FodyWeavers.xsd
 
 
+/tests/integration/shared/Cqrs/ProductApp/Product.App/appsettings.Development.json
+/tests/integration/shared/Cqrs/ShopApp/Shop.Application/appsettings.Development.json
