--- a/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
+++ b/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs.AzureServiceBus\Cqrs.AzureServiceBus.csproj" />
     <ProjectReference Include="..\..\..\..\..\src\Shared\Cqrs\Cqrs.EntityFrameworkCore\Cqrs.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\..\..\..\..\src\Shared\SharedKernel\SharedKernel\SharedKernel.csproj" />
+    <ProjectReference Include="..\ProductApp\Product.App\Product.App.csproj" />
     <ProjectReference Include="..\ShopApp\Shop.Application\Shop.Application.csproj" />
   </ItemGroup>
 
