--- a/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
+++ b/tests/integration/shared/Cqrs/Cqrs.IntegrationTests/Cqrs.IntegrationTests.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="NSubstitute" />
     <PackageReference Include="Polly" />
+    <PackageReference Include="Respawn" />
     <PackageReference Include="Shouldly" />
     <PackageReference Include="Testcontainers.MsSql" />
     <PackageReference Include="Testcontainers.ServiceBus" />
